--- a/src/scss/3-layout/_footer.scss
+++ b/src/scss/3-layout/_footer.scss
@@ -4,12 +4,13 @@
 
 // -------- Footer --------
 .sm--footer {
+  width: 100%;
   text-align: center;
   padding-top: 8rem;
-  padding-bottom: 0rem;
+  padding-bottom: 2rem;
   background: url("/images/content/background-4-footer.svg");
   background-repeat: no-repeat;
-  background-size: 250% 100%;
+  background-size: auto 100%; //Show full background height
   background-position: center;
   color: white;
   transition: $transition-smooth-normal;
@@ -20,13 +21,6 @@
 @media (min-width: $breakpoint-md) {
   .sm--footer {
     text-align: left;
-  }
-}
-
-// On screens Lg+
-@media (min-width: $breakpoint-lg) {
-  .sm--footer {
-    background-size: 100% 100%;
   }
 }
 
@@ -112,7 +106,7 @@
 
 // -------- Footer Signature --------
 .sm--footer__signature {
-  margin: 4rem auto 2.5rem auto;
+  margin: 3.5rem auto 0 auto;
   color: white;
 }
 
